# src/controllers/book.controller.ts
@@ -1,4 +1,4 @@
-import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags} from "tsoa";
+import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Security, Tags} from "tsoa";
 import {BookDTO} from "../dto/book.dto";
 import {bookService} from "../services/book.service";
 import {CustomError} from "../middlewares/errorHandler";
@@ -7,15 +7,18 @@ import {BookCopyDTO} from "../dto/bookCopy.dto";
 import {bookCopyService} from "../services/bookCopy.service";
 
 @Route("books")
+@Security('jwt', ['admin', 'books'])
 @Tags("Books")
 export class BookController extends Controller {
     @Get("/")
+    @Security('jwt', ['admin', 'books', 'read', 'books:read'])
     public async getAllBooks(): Promise<BookDTO[]> {
         return bookService.getAllBooks();
     }
 
     // Récupère un livre par ID
     @Get("/{id}")
+    @Security('jwt', ['admin', 'books', 'read', 'books:read'])
     public async getBookById(@Path() id: number): Promise<BookDTO | null> {
         const book: Book | null = await bookService.getBookById(id);
         if (!book) {
@@ -28,6 +31,7 @@ export class BookController extends Controller {
 
     // Crée un nouveau livre
     @Post("/")
+    @Security('jwt', ['admin', 'books', 'write', 'books:write'])
     public async createBook(
         @Body() requestBody: BookDTO
     ): Promise<BookDTO> {
@@ -42,6 +46,7 @@ export class BookController extends Controller {
 
     // Met à jour un livre par ID
     @Patch("{id}")
+    @Security('jwt', ['admin', 'books', 'update', 'books:update'])
     public async updateBook(
         @Path() id: number,
         @Body() requestBody: BookDTO
@@ -58,12 +63,14 @@ export class BookController extends Controller {
 
     // Supprime un livre par ID
     @Delete("{id}")
+    @Security('jwt', ['admin', 'books', 'delete', 'books:delete'])
     public async deleteBook(@Path() id: number): Promise<void> {
         await bookService.deleteBook(id);
     }
 
     // Récupère les copies d'un livre par ID
     @Get("/{id}/bookCopys")
+    @Security('jwt', ['admin', 'books', 'read', 'books:read'])
     public async getBookBookCopysById(@Path() id: number): Promise<BookCopyDTO[] | null> {
         const book: Book | null = await bookService.getBookById(id);
         if (!book) {
